# faker

./: App.h  Untitled Diagram.drawio  ads.pro.user.a4b92fb  all.sh  eco_main_func_hide_decode.cc  install.sh  kalinux ssh.bat  navicat register.txt  openvpn.sh  readme  readwrite
CLinkList/: CLinkList.sln  CLinkList.vcxproj  CLinkList.vcxproj.filters  EasyFree.h  linkList.c  linkList.h  main.c
CMakeslnm/prj/follow/v1.0.0/sln/cmake/: CMakeLists.txt
SpiderBycc/: Spider.cc  Spider.sln  Spider.vcxproj  readme.txt
TemplateMeta/: CMakeLists.txt
TemplateMeta/HelloShared/: CMakeLists.txt
TemplateMeta/HelloShared/include/shared/: helloShared.h  macro.h
TemplateMeta/HelloShared/src/: helloShared.cpp  main.cpp
TemplateMeta/HelloStatic/: CMakeLists.txt
TemplateMeta/HelloStatic/include/static/: helloStatic.h
TemplateMeta/HelloStatic/src/: helloStatic.cpp  main.cpp
TemplateMeta/TemplateMeta/: CMakeLists.txt
codeManager/makefile/: Makefile  Makefile.back
codeManager/src/: echo.cc
pp/: Python BS4爬虫框架复习.txt  bs4-1.py  shell脚本代码.txt  加速脚本，调用谷歌bbr.txt  爬取图片通用.py
python/: demo.py  photos.py  pyVideos.py  python的坑.txt  tuchong.py  videos.py  爬取图片通用.py  自动化爬虫2.py  通用.py
